feat: 增强错误恢复策略，避免重复计费 + 故障转移优化
主要更新：
- error_recovery: 细化错误类型分类（EOF/连接超时/响应超时），
  EOF和响应超时不再重试以避免重复计费
- manager: 实现故障转移逻辑，活跃端点不健康时自动切换到
  failover_enabled=true 的备用端点，提取公共方法减少代码重复
- SettingItem: 使用 CustomSelect 组件替换原生 select
- CLAUDE.md: 更新为 v5.0 桌面版项目文档
- .gitignore: 允许提交 config/config.yaml 配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,8 @@ data/
 # YAML files (exclude all yaml files except those in config directory)
 *.yaml
 
-# But include yaml files in config directory except config.yaml
+# Include yaml files in config directory
 !config/*.yaml
-config/config.yaml
 
 # Test files
 *_test_example.go
